# performer

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  README.md  eslint.config.js  index.html  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts  vite.tauri.config.ts  vitest.config.ts
.github/: dependabot.yml
.github/workflows/: auto-release.yml  build-and-release.yml  ci.yml
src/: App.vue  ControlPanel.css  broadcast.ts  index.css  main.ts  shaderBuilder.ts  shaderBuilderWGSL.ts  transitions.ts  utils.ts  version.ts  webgpu.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  midi.rs
src/components/: index.ts
src/components/controls/: ControlPanel.vue  usePopupWindow.ts
src/components/effects/: EffectsTab.vue  useEffectTransitions.test.ts  useEffectTransitions.ts
src/components/input/: InputTab.vue  useVideoPlayer.test.ts  useVideoPlayer.ts  useVideoPlaylist.test.ts  useVideoPlaylist.ts  useVideoSource.ts
src/composables/: useBpmTap.test.ts  useBpmTap.ts  useFrameQualityGuard.ts  useMidi.ts  useRandomizeMode.test.ts  useRandomizeMode.ts  useSettings.test.ts  useSettings.ts  useWebGLRenderer.test.ts  useWebGLRenderer.ts  useWebGPURenderer.test.ts  useWebGPURenderer.ts
src/services/: settingsService.ts
src/test/: setup.ts  utils.ts
src/views/: ControlsView.vue  MainView.vue
