[package]
name = "performer"
version = "2.4.0"
edition = "2021"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.11.0", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
